# comfyui-easy-resize

./: LICENSE  README.md  __init__.py  nodes.py  presets.py  pyproject.toml  resize.py
.github/workflows/: ci.yml  release.yml
