[project]
name = "comfyui-easy-resize"
version = "1.0.0"
description = "ComfyUI custom nodes for quick image size selection with curated presets"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "jluo-github" }]
keywords = ["comfyui", "custom-nodes", "image-resize", "sdxl", "flux"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
